fix: removed implicit heading test: too much false positive

--- a/sass/themes/_advice.scss
+++ b/sass/themes/_advice.scss
@@ -718,40 +718,3 @@ a:not([href])
 a:not([href]) {
   @include advice('no-href');
 }
-
-
-/*doc
----
-title: "Implicit heading"
-name: implicit-heading
-category: Advices
----
-
-##Description
-A paragraph containing only a bold text could be marked up as a heading, couldn't it?
-
-##References
-* <http://references.modernisation.gouv.fr/rgaa/criteres.html#crit-9-1>
-* <https://www.w3.org/TR/WCAG-TECHS/H42.html>
-* <https://www.w3.org/TR/WCAG-TECHS/F2.html>
-* <https://github.com/karlgroves/diagnostic.css/blob/39ede15ff46bd59af9f8f30efb04cbb45b6c1ba5/diagnostic.css#L127>
-* <https://bitsofco.de/using-heading-elements-to-create-a-document-outline/>
-* <https://www.w3.org/WAI/tutorials/page-structure/headings/>
-
-##Selector
-```css_example
-p > b:only-child,
-p > strong:only-child
-```
-
-##Test
-```html_example
-<p>
-  <strong>Heading level 7</strong>
-</p>
-```
-*/
-p > b:only-child,
-p > strong:only-child {
-  @include advice('implicit-heading');
-}
